opam-version: "1.2"
maintainer: "Liang Wang (ryanrhymes@gmail.com)"
authors: [ "Liang Wang (ryanrhymes@gmail.com)" ]
license: "MIT"
homepage: "https://github.com/ryanrhymes/eigen"
dev-repo: "git+https://github.com/ryanrhymes/eigen.git"
bug-reports: "https://github.com/ryanrhymes/eigen/issues"
doc: "http://www.cl.cam.ac.uk/~lw525/owl/"

version: "dev"

build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "ctypes"
  "jbuilder" {build}
]
available: [ ocaml-version >= "4.02.0" ]
