(rule
 (targets ffi_eigen_generated.ml)
 (deps ../bindings/ffi_eigen_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -ml))))

(rule
 (targets ffi_eigen_generated_stub.c)
 (deps ../bindings/ffi_eigen_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -c))))

(rule
 (targets c_flags.sexp)
 (deps
  (:deps-conf configure/configure.exe))
 (action
  (run %{deps-conf})))

(library
 (name eigen)
 (public_name eigen)
 (libraries ctypes)
 (modules :standard ffi_eigen_generated)
 (foreign_archives ../eigen_cpp/eigen_cpp_stubs)
 (foreign_stubs
  (language c)
  (names eigen_utils_stubs ffi_eigen_generated_stub)
  (include_dirs ../eigen_cpp/lib)
  (flags
   :standard
   (:include c_flags.sexp))))
