(* -*- tuareg -*- *)

let optflags =
  match Sys.getenv "EIGENCPP_OPTFLAGS" with
  | s ->
    s
  | exception Not_found ->
    "-Ofast -march=native -funroll-loops -ffast-math"

let devflags =
  match Sys.getenv "EIGENCPP_DIAGNOSTIC" with
  | s -> "-Wall -Wno-invalid-partial-specialization -Wno-extern-c-compat -Wno-c++11-long-long -Wno-ignored-attributes "^s
  | exception Not_found -> "-w -Wno-invalid-partial-specialization"

let () = Printf.ksprintf Jbuild_plugin.V1.send {|

(include_subdirs unqualified)

(foreign_library
 (archive_name eigen_cpp_stubs)
 (language cxx)
 (names eigen_tensor eigen_dsmat eigen_spmat)
 (include_dirs lib lib/unsupported)
 (flags
   :standard
   -fPIC
   -ansi
   -pedantic
   -O3
   -std=c++11
   -lstdc++
   %s
   %s
  )
 )

|} devflags optflags
