(include_subdirs unqualified)

(rule
 (targets cpp_flags.sexp)
 (deps
  (:deps-conf configure/configure.exe))
 (action
  (run %{deps-conf})))

(foreign_library
 (archive_name eigen_cpp_stubs)
 (language cxx)
 (names eigen_tensor eigen_dsmat eigen_spmat)
 (include_dirs lib lib/unsupported)
 (flags
  :standard
  (:include cpp_flags.sexp)))
